@@ -1,17 +1,10 @@
 {
-  "timestamp" : "2022-08-09T16:07:59Z",
-  "count_outdated" : 42,
-  "uniques_outdated" : 12,
+  "timestamp" : "2022-08-11T00:37:46Z",
+  "count_outdated" : 43,
+  "uniques_outdated" : 13,
   "count" : 46,
   "uniques" : 16,
   "views" : [
-    {
-      "timestamp": "2022-07-27T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ]
-    },
     {
       "timestamp": "2022-08-03T00:00:00Z",
       "count": 1,
